# PranataCRM

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_geo_reference_data.py  0003_source_other_columns.py
backend/app/: config.py  container.py  database.py  main.py  worker.py
backend/app/modules/ai/: models.py  orchestrator.py  (+3 more)
backend/app/shared/: auth_dependency.py  base.py  events.py  exceptions.py  jwt.py  logging.py  middleware.py  redis.py  types.py
backend/app/tasks/: ai_tasks.py  email_tasks.py  report_tasks.py
backend/db/seed/: geo_reference_data.sql
backend/scripts/: backfill_geo_locations.py
backend/tests/: common.py
backend/tests/auth/: base.py  test_invite.py  test_login.py  test_logout.py  test_me.py  test_register_tenant.py  test_register_user.py  test_users_search.py
backend/tests/companies/: base.py  test_companies.py  test_companies_search.py  test_company_model_defaults.py  test_location_reference.py  test_owner_reference.py
backend/tests/contacts/: base.py  test_company_reference.py  test_contacts.py  test_contacts_filters.py  test_location_reference.py  test_owner_reference.py
backend/tests/deals/: base.py  test_deal_stage.py  test_deals.py  test_reference_guards.py
backend/tests/geo/: base.py  test_admin_router.py  test_cache_aside.py  test_public_router.py  test_repository_integrity_errors.py  test_validate_location.py
(+137 files in other folders)
